...
        List<dynamic> body = jsonDecode(response.body);
        List<Review> reviews =
            body.map((item) => Review.fromJson(item)).toList();

        return reviews;
      } else {
        print("Error: ${response.statusCode}");
        throw "Failed to load reviews";
      }
    } catch (e) {
      print("Error fetching reviews: $e");
      throw "Failed to load reviews";
    }
...
