...
        emit(const AuthFailure(message: 'Not authenticated'));
      }
    } catch (e) {
      if (e.toString().contains('IncorrectPassword')) {
        emit(const AuthFailure(message: 'Incorrect password'));
      } else {
        emit(const AuthFailure(message: 'User name or password is incorrect'));
      }
    }
  }

  // UserLoggedOut event handler
  void _handleUserLoggedOut(
...
